<resources>
    <string name="app_name">Perbasi Jepara</string>
    <string name="splash_logo">splash_logo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="basketball">basketball</string>
    <string name="login_dengan_sosial_media">Login dengan sosial media</string>
    <string name="facebook">FACEBOOK</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">DAFTAR</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="kirim">Kirim</string>
    <string name="silahkan_cek_email">Kami akan mengirimkan link reset password. Silahkan cek email anda.</string>
    <string name="informasi">Informasi</string>
    <string name="gallery">Galeri</string>
    <string name="video">Video</string>
    <string name="tournament">Tournament</string>
    <string name="tentang">Tentang</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="berita">Berita</string>
    <string name="event">Event</string>
    <string name="title_judul">Ini adalah Judul Artikel yang Cukup Panjang</string>
    <string name="deskripsi_berita">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="gambar_news">gambar_news</string>
    <string name="profil">Profil</string>
    <string name="foto">Foto</string>
    <string name="tgl">Tgl : </string>
    <string name="_15_desember_2018">Senin, 15 Desember 2018</string>
    <string name="player">Pemain</string>
    <string name="tanggal">13 Juni 2018</string>
    <string name="detail_image">detail_image</string>
    <string name="judul_berita">Ketika cinta bertasbih hatiku terdenyut merdu kembang kembis dadaku merangkai</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu volutpat odio facilisis mauris sit. Nisi scelerisque eu ultrices vitae auctor. Vitae elementum curabitur vitae nunc sed velit dignissim. Non consectetur a erat nam at lectus urna duis convallis. Placerat orci nulla pellentesque dignissim enim sit amet venenatis. Ligula ullamcorper malesuada proin libero nunc consequat. Aenean et tortor at risus viverra adipiscing at in tellus.</string>
    <string name="share">Share</string>
    <string name="tanggal_lengkap">Senin, 13 Desember 2018</string>
    <string name="judul_event">TANDING BASKET SERU</string>
    <string name="event_thumbnail">event_thumbnail</string>
    <string name="info_event">Info Event</string>
    <string name="lokasi">Lokasi</string>
    <string name="alamat_event">Bugel Kedung Jepara</string>
    <string name="alamat">Alamat</string>
    <string name="nama_alamat_event">Jl. Raya Bugel Pecangaan KM 7</string>
    <string name="nama_tanggal">Tanggal</string>
    <string name="team_terdaftar">Team Terdaftar</string>
    <string name="tentang_event">Tentang Event</string>
    <string name="jumlah_team_terdaftar">30</string>
    <string name="ini_nama_event">Ini Nama Event</string>
    <string name="male">Male</string>
    <string name="status_event_kategori">Status Event Kategori</string>
    <string name="open">OPEN</string>
    <string name="registrasi_belum_dibuka">Belum Dibuka</string>
    <string name="registrasi_dibuka">Dibuka</string>
    <string name="registrasi_ditutup">Ditutup</string>
    <string name="putri">Putri</string>
    <string name="putra">Putra</string>
    <string name="nama_team">Nama Team</string>
    <string name="lihat_team">Lihat Team</string>
    <string name="detail">Detail</string>
    <string name="register">Register</string>
    <string name="start_at">Start At</string>
    <string name="waktu">13:00</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="finals">Finals</string>
    <string name="win_lose">W-L</string>
    <string name="pts">PTS</string>
    <string name="avg_pts">AVG PTS</string>
    <string name="point">point</string>
    <string name="satu">1</string>
    <string name="signup">Signup</string>
    <string name="perbasilogo">perbasilogo</string>
    <string name="login_fb">login facebook</string>
    <string name="register_with_facebook">REGISTER WITH FACEBOOK</string>
    <string name="photo_profile">photo_profile</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="set_tanggal">Set tanggal</string>
    <string name="umur">Umur</string>
    <string name="nama_user">Nama User</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="nama">Nama</string>
    <string name="logout">logout</string>
    <string name="perempuan">Perempuan</string>
    <string name="terjadi_kesalahan">Terjadi Kesalahan</string>
    <string name="login_atau_register">Login atau Register</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="yakin_ingin_logout">Yakin ingin logout?</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="update_profile">updateProfile</string>
    <string name="update">Update</string>
    <string name="tanggalLahir">tanggalLahir</string>
    <string name="gender">Gender</string>
    <string name="uidUser">uidUser</string>
    <string name="imgUser">imgUser</string>
    <string name="nama_tidak_benar">nama tidak benar</string>
    <string name="emai_tidak_benar">email tidak benar</string>
    <string name="pass_tidak_benar">password tidak benar</string>
    <string name="pass_tidak_sama">password tidak sama</string>
    <string name="pass_lebih_dari">password harus lebih dari 6 karakter</string>
    <string name="tgl_tidak_boleh_kosong">tanggal lahir tidak boleh kosong</string>
    <string name="alamat_tidak_benar">alamat tidak benar</string>
    <string name="local">local</string>
    <string name="password_lama">Password Lama</string>
    <string name="pass_baru">Password Baru</string>
    <string name="nama_tim">Nama Tim</string>
    <string name="nama_pemain">Nama Pemain</string>
    <string name="pemain_1">Pemain 1</string>
    <string name="pemain_2">Pemain 2</string>
    <string name="nomor_telepon">Nomor Telepon</string>
</resources>
