<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/informasi"
        android:icon="@drawable/info_circle_48px"
        android:title="@string/informasi"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/gallery"
        android:icon="@drawable/photo_gallery_48px"
        android:title="@string/gallery"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/video"
        android:icon="@drawable/circled_play_48px"
        android:title="@string/video"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/tournament"
        android:icon="@drawable/trophy_48px"
        android:title="@string/tournament"
        app:showAsAction="ifRoom"/>

</menu>