<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/basketball"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/basketball"/>

        <EditText
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawableStart="@drawable/name_24px_black"
            android:background="@drawable/edit_text_border"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            tools:targetApi="o"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawableStart="@drawable/email_24px_black"
            android:background="@drawable/edit_text_border"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            tools:targetApi="o"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawableStart="@drawable/password_24px_black"
            android:background="@drawable/edit_text_border"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            tools:targetApi="o" />

        <EditText
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawableStart="@drawable/password_24px_black"
            android:background="@drawable/edit_text_border"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ulangi_password"
            android:layout_marginBottom="10dp"
            tools:targetApi="o" />

        <Button
            android:background="@drawable/button_accent"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun?"/>

        <TextView
            android:textSize="17sp"
            android:id="@+id/login_btn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>