<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:maxLines="1"
            android:id="@+id/standings_nama_team"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:gravity="center_vertical"
            android:layout_weight="0.5"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finals"/>

        <TextView
            android:maxLines="1"
            android:id="@+id/standing_win_lose"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/win_lose"/>

        <TextView
            android:maxLines="1"
            android:id="@+id/standings_pts"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pts"/>

        <TextView
            android:maxLines="1"
            android:id="@+id/standings_avg_pts"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/avg_pts"/>

    </LinearLayout>

    <View
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>