<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView app:cardCornerRadius="10dp"
    android:layout_marginBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/kategori_event_judul"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ini_nama_event"/>

        <TextView
            android:id="@+id/kategori_event_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"/>

        <View
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blackLine"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/kategori_event_status"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open"/>

            <TextView
                android:id="@+id/kategori_event_register"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>