<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/berita_judul"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_berita"/>

        <TextView
            android:id="@+id/berita_tanggal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lengkap"/>

        <com.bluejamesbond.text.DocumentView
            android:id="@+id/berita_deskripsi"
            android:lineSpacingExtra="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:documentView_text="@string/lorem_ipsum"
            app:documentView_textAlignment="justified" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>