<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="7dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:scaleType="centerCrop"
                android:id="@+id/image_player"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_launcher_background"/>

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:id="@+id/nama_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_lengkap"/>

                <TextView
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:id="@+id/alamat_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"/>

                <TextView
                    android:visibility="gone"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:id="@+id/team_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_terdaftar"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/whiteLight"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_weight="1"
                android:id="@+id/point_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/point"/>

            <TextView
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:id="@+id/rank_player"
                android:gravity="center_vertical|end"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/satu"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>